--- a/style/index.css
+++ b/style/index.css
@@ -1,71 +1,285 @@
 @import url("https://fonts.googleapis.com/css2?family=Oswald:wght@400;500;600;700&display=swap");
-* {
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
 }
 
 body {
   font-family: "Oswald", sans-serif;
 }
 
-div.nav-wrapper {
+.nav {
   background: #000000;
-  padding: 1.7em 1em;
+  padding: 1em 0;
   top: 0;
   width: 100%;
   position: fixed;
   background-color: rgba(0, 0, 0, 0.7);
 }
-div.nav-wrapper nav.nav {
-  display: flex;
-}
-div.nav-wrapper nav.nav div.nav-logo img {
-  width: 100%;
-}
-div.nav-wrapper div.hamburger {
-  padding: 0 1em;
-  cursor: pointer;
+.nav__toggle {
   position: absolute;
+  cursor: pointer;
+  margin: 0em 1em;
   right: 0;
 }
-div.nav-wrapper div.hamburger .bar {
-  background: white;
-  display: block;
-  width: 30px;
-  height: 4px;
-  margin: 3px auto;
-  border-radius: 4px;
-  transition: all 0.3s ease-in-out;
+.nav__toggle svg {
+  width: 1.5rem;
+  fill: #FFFFFF;
 }
-div.nav-wrapper div.hamburger.active .bar:nth-child(2) {
-  opacity: 0;
+.nav__toggle .close {
+  display: none;
+  padding: 1em 0;
 }
-div.nav-wrapper div.hamburger.active .bar:nth-child(1) {
-  transform: translateY(8px) rotate(45deg);
+.nav__toggle .menu {
+  padding: 1em 0;
 }
-div.nav-wrapper div.hamburger.active .bar:nth-child(3) {
-  transform: translateY(-8px) rotate(-45deg);
-}
-div.nav-wrapper .nav-menu {
-  position: relative;
-  margin: 5em auto;
-  line-height: 2.7em;
-  font-size: 20px;
-  font-weight: bold;
-  text-align: center;
-  transition: 0.3s;
-}
-div.nav-wrapper .nav-menu.active {
-  display: block;
-}
-div.nav-wrapper ul.nav-menu {
+.nav__checkbox {
   display: none;
 }
-div.nav-wrapper ul.nav-menu li {
-  list-style: none;
+.nav__menu {
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+  align-items: center;
+  padding: 1em 1em;
 }
-div.nav-wrapper ul.nav-menu li, div.nav-wrapper ul.nav-menu a {
-  text-decoration: none;
+.nav__menu li {
+  list-style: none;
+  display: none;
   color: #FFFFFF;
+}
+.nav__menu li:first-child {
+  margin-right: auto;
+  display: block;
+}
+.nav__menu a {
+  text-decoration: none;
+  color: inherit;
+  font-size: 1.2rem;
+}
+.nav__menu svg {
+  width: 1.5rem;
+  fill: #000000;
+}
+
+#nav__checkbox:checked ~ ul.nav__menu li {
+  display: block;
+}
+
+#nav__checkbox:checked ~ label.nav__toggle .close {
+  display: block;
+}
+
+#nav__checkbox:checked ~ label.nav__toggle .menu {
+  display: none;
+}
+
+div.main-wrapper {
+  width: 100%;
+  height: 100vh;
+}
+div.main-wrapper div.hero-container {
+  background: linear-gradient(to top, rgba(0, 0, 0, 0.5) 50%, rgba(0, 0, 0, 0.5) 50%), url(/img/hero-img.jpg);
+  height: 100vh;
+  min-width: 100%;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+div.main-wrapper h1 {
+  display: flex;
+  padding-top: 6em;
+  text-align: center;
+  font-size: 2.4rem;
+  min-width: 80%;
+  align-items: center;
+  color: #FFFFFF;
+}
+div.main-wrapper p {
+  display: flex;
+  text-align: center;
+  font-size: 1rem;
+  min-width: 80%;
+  font-weight: 400px;
+  margin: 0 1em;
+  padding-top: 2em;
+  text-align: center;
+  color: #FFFFFF;
+}
+div.main-wrapper div.button-container {
+  display: flex;
+  justify-content: space-around;
+  margin-top: 4em;
+  min-width: 80%;
+  align-items: center;
+}
+div.main-wrapper div.button-container div.order-btn a {
+  display: flex;
+  justify-content: center;
+  min-width: 12vw;
+  padding: 1em 1.4em;
+  background: #EACA41;
+  color: #000000;
+  text-decoration: none;
+  border-radius: 4px;
+  font-size: 19px;
+  text-align: center;
+  align-items: center;
+  font-weight: 800;
+}
+div.main-wrapper div.button-container div.read-btn a {
+  justify-content: center;
+  display: flex;
+  min-width: 12vw;
+  padding: 1.1em 1.4em;
+  text-align: center;
+  align-items: center;
+  border: 2px #FFFFFF solid;
+  color: #FFFFFF;
+  text-decoration: none;
+  border-radius: 4px;
+  font-size: 17px;
+  font-weight: 800;
+}
+
+div.first-container {
+  background: linear-gradient(to top, rgba(0, 0, 0, 0.5) 50%, rgba(0, 0, 0, 0.5) 50%), url(/img/content-1.jpg);
+  padding: 0 1em;
+}
+div.first-container div.first-header h1 {
+  display: flex;
+  font-size: 1.7rem;
+  min-width: 80%;
+  padding-top: 1.4em;
+}
+div.first-container p {
+  font-size: 1rem;
+  padding: 0;
+  margin: 1em 0 3em;
+}
+div.first-container div.product-container div.product-item img {
+  width: 100%;
+  margin-bottom: 1em;
+  cursor: pointer;
+}
+div.first-container div.patch-container {
+  display: none;
+}
+
+div.second-container {
+  padding: 0 1em;
+  background: #000000;
+}
+div.second-container div.second-header h1 {
+  display: flex;
+  text-align: left;
+  font-size: 1.7rem;
+  min-width: 80%;
+  padding-top: 1.4em;
+}
+div.second-container p {
+  font-size: 1rem;
+  padding: 0;
+  margin: 1em 0 3em;
+}
+div.second-container div.product-container div.product-item {
+  margin: 0;
+}
+div.second-container div.product-container div.product-item img {
+  width: 100%;
+  cursor: pointer;
+}
+div.second-container div.product-container div.card-info {
+  padding: 0;
+}
+div.second-container div.product-container div.card-info h1 {
+  text-align: left;
+  font-size: 30px;
+  padding: 0;
+}
+div.second-container div.product-container div.card-info p {
+  font-size: 14px;
+  padding-bottom: 1em;
+  margin: 0;
+  text-align: left;
+}
+div.second-container div.product-container div.card-info div.selection {
+  padding: 1em;
+  background: #EACA41;
+}
+div.second-container div.product-container div.card-info div.selection label {
+  font-size: 14px;
+  font-weight: 500;
+}
+div.second-container div.product-container div.card-info div.selection select {
+  padding: 0.7em 1.4em;
+}
+div.second-container div.product-container div.card-info div.selection button {
+  cursor: pointer;
+  padding: 0.7em 1em;
+  background: #FF4800;
+  color: #FFFFFF;
+  border-radius: 4px;
+  border: solid 1px #000000;
+}
+div.second-container div.patch-container {
+  display: none;
+}
+
+div.third-container {
+  width: 100%;
+  height: 220vh;
+  padding: 0 1em;
+  background: #000000;
+}
+div.third-container div.third-head h1 {
+  display: flex;
+  text-align: left;
+  font-size: 1.7rem;
+  min-width: 80%;
+  padding-top: 1.4em;
+}
+div.third-container p {
+  font-size: 1rem;
+  padding: 0;
+  margin: 1em 0 3em;
+}
+div.third-container div.card-container {
+  padding: 1em;
+  text-align: center;
+  align-items: center;
+  background: #121212;
+  margin-bottom: 2em;
+}
+div.third-container div.card-container .card-header h2 {
+  color: #FFFFFF;
+  text-align: center;
+  align-items: center;
+  margin-bottom: 0.4em;
+}
+div.third-container div.card-container p {
+  font-size: 16px;
+}
+div.third-container div.card-container button {
+  background: #FF2200;
+  padding: 0.7em 4em;
+  color: #FFFFFF;
+  font-size: 16px;
+  font-weight: 600;
+  border: none;
+  cursor: pointer;
+}
+
+@media only screen and (min-width: 560px) {
+  .nav__toggle {
+    display: none;
+  }
+  .nav__menu {
+    flex-direction: row;
+  }
+  .nav__menu li {
+    display: block;
+  }
 }/*# sourceMappingURL=index.css.map */
