--- a/style/index.css
+++ b/style/index.css
@@ -7,6 +7,10 @@
   padding: 0;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   font-family: "Oswald", sans-serif;
 }
@@ -112,36 +116,37 @@ div.main-wrapper div.button-container {
   display: flex;
   justify-content: space-around;
   margin-top: 4em;
-  min-width: 80%;
   align-items: center;
 }
 div.main-wrapper div.button-container div.order-btn a {
   display: flex;
   justify-content: center;
-  min-width: 12vw;
-  padding: 1em 1.4em;
+  padding: 1.4em 1.7em;
   background: #EACA41;
   color: #000000;
   text-decoration: none;
   border-radius: 4px;
-  font-size: 19px;
+  font-size: 18px;
   text-align: center;
   align-items: center;
   font-weight: 800;
+  width: 150px;
+  min-width: 100%;
 }
 div.main-wrapper div.button-container div.read-btn a {
   justify-content: center;
   display: flex;
-  min-width: 12vw;
-  padding: 1.1em 1.4em;
+  padding: 1.4em 1.7em;
   text-align: center;
   align-items: center;
   border: 2px #FFFFFF solid;
   color: #FFFFFF;
   text-decoration: none;
   border-radius: 4px;
-  font-size: 17px;
+  font-size: 16px;
   font-weight: 800;
+  width: 150px;
+  min-width: 100%;
 }
 
 div.first-container {
@@ -230,7 +235,6 @@ div.second-container div.patch-container {
 
 div.third-container {
   width: 100%;
-  height: 220vh;
   padding: 0 1em;
   background: #000000;
 }
@@ -245,6 +249,9 @@ div.third-container p {
   font-size: 1rem;
   padding: 0;
   margin: 1em 0 3em;
+}
+div.third-container div.card-list {
+  padding-bottom: 2em;
 }
 div.third-container div.card-container {
   padding: 1em;
@@ -272,6 +279,208 @@ div.third-container div.card-container button {
   cursor: pointer;
 }
 
+div.fourth-container {
+  background: #D9D9D9;
+  padding: 0 1em;
+}
+div.fourth-container .the-basics {
+  padding: 0;
+  margin: 0;
+}
+div.fourth-container .the-basics .left-basics img {
+  display: none;
+}
+div.fourth-container .the-basics .right-basics .right-header p.infil {
+  margin: 0;
+  font-size: 24px;
+  font-weight: 500;
+  color: #000000;
+}
+div.fourth-container .the-basics .right-basics .right-header h1 {
+  padding-top: 0;
+  background: #000000;
+  font-size: 32px;
+  color: #FF4800;
+}
+div.fourth-container .the-basics .right-basics .right-header h2 {
+  font-size: 20px;
+}
+div.fourth-container .the-basics .right-basics .right-header p {
+  color: #000000;
+}
+div.fourth-container .the-basics .right-basics {
+  padding: 0;
+}
+div.fourth-container .the-basics .right-basics p {
+  color: #000000;
+  text-align: left;
+  margin-left: 0;
+  align-items: center;
+}
+div.fourth-container .the-basics .right-basics div.plus-container p {
+  font-weight: 300;
+}
+div.fourth-container .the-basics .right-basics div.plus-container i {
+  margin-right: 0.7em;
+}
+
+div.fifth-container {
+  padding: 0 1em;
+  background: #D9D9D9;
+  padding-bottom: 17em;
+}
+div.fifth-container .unitrole-container .unitrole-header p.ope {
+  margin: 0;
+  font-size: 24px;
+  font-weight: 500;
+  color: #000000;
+}
+div.fifth-container .unitrole-container .unitrole-header div.box-basic {
+  background: #000000;
+}
+div.fifth-container .unitrole-container .unitrole-header div.box-basic h1 {
+  padding-top: 0;
+  font-size: 32px;
+  color: #FF4800;
+}
+div.fifth-container .unitrole-container .unit-description p {
+  margin: 0;
+  text-align: left;
+  color: #000000;
+}
+div.fifth-container .unitrole-container .important-box {
+  background: #FF2200;
+  color: #000000;
+}
+div.fifth-container .unitrole-container .important-box h1 {
+  text-align: left;
+  padding: 0;
+  margin: 1em;
+  color: #000000;
+  font-size: 16px;
+}
+div.fifth-container .unitrole-container div.right-content .success-container {
+  background: #000000;
+  border-top: #FF4800 solid 17px;
+  padding: 2em;
+}
+div.fifth-container .unitrole-container div.right-content .success-container .success-header {
+  padding: 0 1em;
+}
+div.fifth-container .unitrole-container div.right-content .success-container .success-header h1 {
+  padding: 0;
+  font-size: 32px;
+  color: #FF4800;
+}
+div.fifth-container .unitrole-container div.right-content .success-container .success-header p.setup {
+  margin: 0;
+  color: #FF4800;
+}
+div.fifth-container .unitrole-container div.right-content .success-container .success-header p.players {
+  margin: 0;
+  color: #FF4800;
+}
+div.fifth-container .unitrole-container div.right-content .success-container .players-para p {
+  text-align: left;
+}
+div.fifth-container .unitrole-container div.right-content .success-container .success-para p {
+  text-align: left;
+  color: #FFFFFF;
+}
+div.fifth-container .unitrole-container div.right-content .org-container {
+  padding: 2em;
+  background: #000000;
+  border-top: #FF4800 solid 17px;
+}
+div.fifth-container .unitrole-container div.right-content .org-container .success-header {
+  padding: 0 1em;
+}
+div.fifth-container .unitrole-container div.right-content .org-container .success-header h1 {
+  padding: 0;
+  font-size: 32px;
+  color: #FF4800;
+}
+div.fifth-container .unitrole-container div.right-content .org-container .success-header p.org {
+  margin: 0;
+  color: #FF4800;
+}
+div.fifth-container .unitrole-container div.right-content .org-container .org-para p {
+  text-align: left;
+  color: #FFFFFF;
+}
+div.fifth-container .unitrole-container div.right-content .effects-container {
+  padding: 2em;
+  background: #000000;
+  border-top: #FF4800 solid 17px;
+}
+div.fifth-container .unitrole-container div.right-content .effects-container .success-header {
+  padding: 0 1em;
+}
+div.fifth-container .unitrole-container div.right-content .effects-container .success-header h1 {
+  padding: 0;
+  font-size: 32px;
+  color: #FF4800;
+}
+div.fifth-container .unitrole-container div.right-content .effects-container .effects-para p {
+  text-align: left;
+  color: #FFFFFF;
+}
+
+div.footer-container {
+  background: #000000;
+  padding: 0 1em;
+}
+div.footer-container footer div.left-content .link-support {
+  padding-top: 2em;
+  padding-bottom: 2em;
+  text-align: center;
+}
+div.footer-container footer div.left-content .link-support a {
+  font-size: 18px;
+  text-decoration: none;
+  color: #FFFFFF;
+  font-weight: bold;
+}
+div.footer-container footer div.left-content div.social {
+  color: white;
+  font-size: 24px;
+  text-align: center;
+  justify-content: space-between;
+}
+div.footer-container footer div.left-content div.social i {
+  padding: 0 0.4em;
+}
+div.footer-container footer div.right-content {
+  padding-top: 4em;
+}
+div.footer-container footer div.right-content h1 {
+  padding: 0;
+  margin: 0;
+}
+div.footer-container footer div.right-content .link-item a {
+  text-decoration: none;
+  color: #FFFFFF;
+}
+div.footer-container footer div.right-content .link-item p {
+  margin: 0;
+}
+
+@media only screen and (min-width: 530px) {
+  div.hero-container h1 {
+    font-size: 46px;
+  }
+  div.hero-container p {
+    font-size: 26px;
+  }
+  div.hero-container div.button-container .order-btn {
+    display: block;
+    min-width: 44%;
+  }
+  div.hero-container div.button-container .read-btn {
+    display: block;
+    min-width: 44%;
+  }
+}
 @media only screen and (min-width: 560px) {
   .nav__toggle {
     display: none;
@@ -281,5 +490,250 @@ div.third-container div.card-container button {
   }
   .nav__menu li {
     display: block;
+  }
+}
+@media only screen and (min-width: 768px) {
+  div.first-container div.first-header h1 {
+    font-size: 2rem;
+  }
+  div.first-container div.first-header p {
+    font-size: 1rem;
+  }
+  div.product-container {
+    display: flex;
+    justify-content: space-between;
+    gap: 1em;
+  }
+  div.second-container div.second-header h1 {
+    font-size: 2rem;
+  }
+  div.second-container div.second-header p {
+    font-size: 1rem;
+  }
+  div.third-container div.third-head h1 {
+    font-size: 2rem;
+  }
+  div.third-container div.third-head p {
+    font-size: 1rem;
+  }
+  div.third-container div.card-list {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 1em;
+  }
+  div.fourth-container div.the-basics .right-basics .right-header p.infil {
+    font-size: 2rem;
+  }
+  div.fourth-container div.the-basics .right-basics .right-header h1 {
+    font-size: 3rem;
+  }
+  div.fifth-container div.unitrole-container div.unitrole-header p.ope {
+    font-size: 2rem;
+  }
+  div.fifth-container div.unitrole-container div.unitrole-header .box-basic h1 {
+    font-size: 3rem;
+  }
+  div.footer-container footer div.right-content {
+    gap: 4em;
+    justify-content: center;
+    display: flex;
+  }
+}
+@media only screen and (min-width: 819px) {
+  div.hero-container {
+    height: 100%;
+  }
+  div.hero-container h1 {
+    font-size: 3rem;
+  }
+  div.hero-container p {
+    font-size: 2rem;
+  }
+  div.hero-container div.button-container div.order-btn {
+    width: 20px;
+  }
+  div.hero-container div.button-container div.order-btn a {
+    font-size: 20px;
+  }
+  div.hero-container div.button-container div.read-btn a {
+    font-size: 20px;
+  }
+}
+@media only screen and (min-width: 849px) {
+  div.hero-container {
+    width: 100%;
+    height: 100vh;
+    padding: 0 4em;
+  }
+  div.hero-container h1 {
+    font-size: 3rem;
+  }
+}
+@media only screen and (min-width: 1200px) {
+  div.hero-container {
+    padding-top: 0;
+  }
+  div.hero-container h1 {
+    margin: 0;
+    padding-top: 4em;
+    font-size: 70px;
+    text-align: left;
+  }
+  div.hero-container p {
+    font-size: 27px;
+    margin: 0;
+    text-align: left;
+  }
+  div.hero-container div.button-container {
+    width: 420px;
+    font-size: 26px;
+  }
+  div.first-container div.first-header h1 {
+    font-size: 40px;
+  }
+  div.first-container div.first-header p {
+    font-size: 30px;
+  }
+  div.first-container div.patch-container {
+    display: flex;
+    gap: 1em;
+  }
+  div.first-container div.patch-container div.product-item {
+    background: #000000;
+    margin-bottom: 4em;
+  }
+  div.first-container div.patch-container div.product-item img {
+    width: 100%;
+  }
+  div.first-container div.patch-container div.product-item .card-info {
+    padding: 0 1em;
+    padding-bottom: 2em;
+  }
+  div.first-container div.patch-container div.product-item .card-info p {
+    font-size: 20px;
+    margin: 0;
+    padding-bottom: 1em;
+  }
+  div.first-container div.patch-container div.product-item .card-info h1 {
+    padding-top: 0;
+    padding-bottom: 1em;
+    text-align: left;
+    font-size: 24px;
+  }
+  div.first-container div.patch-container div.product-item .card-info button {
+    padding: 1em;
+    background: #EACA41;
+    color: #000000;
+    font-weight: 800;
+    border: none;
+    cursor: pointer;
+    border-radius: 5px;
+  }
+  div.second-container div.second-header h1 {
+    font-size: 40px;
+  }
+  div.second-container div.second-header p {
+    font-size: 30px;
+  }
+  div.second-container div.product-item div.card-info div.selection label {
+    font-size: 30px;
+  }
+  div.second-container div.product-item div.card-info div.selection select {
+    width: 77%;
+    padding: 1em;
+  }
+  div.second-container div.product-item div.card-info div.selection button {
+    width: 20%;
+    padding: 1em;
+  }
+  div.third-container div.third-head h1 {
+    font-size: 40px;
+  }
+  div.third-container div.third-head p {
+    font-size: 30px;
+  }
+  div.third-container div.card-list {
+    padding: 0 1em;
+  }
+  div.third-container div.card-list div.card-container h2 {
+    font-size: 30px;
+  }
+  div.third-container div.card-list div.card-container p {
+    font-size: 20px;
+  }
+  div.third-container div.card-list div.card-container button {
+    padding: 1.4em 3em;
+  }
+  div.fourth-container {
+    padding-top: 2em;
+  }
+  div.fourth-container div.the-basics {
+    padding: 0 1em;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+  }
+  div.fourth-container div.the-basics div.left-basics img {
+    width: 100%;
+    display: block;
+  }
+  div.fourth-container div.the-basics div.right-basics {
+    padding-left: 1em;
+  }
+  div.fifth-container div.unitrole-container {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+  }
+  div.fifth-container div.unitrole-container div.right-content {
+    padding-top: 4em;
+    padding-left: 1em;
+  }
+  div.footer-container footer {
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+    align-items: center;
+  }
+  div.footer-container footer div.left-content {
+    padding: 0;
+    margin: 0;
+  }
+  div.footer-container footer div.left-content div.link-support {
+    padding-top: 0;
+    margin: 0;
+  }
+  div.footer-container footer div.left-content div.social {
+    padding: 0 1em;
+    justify-content: left;
+  }
+}
+@media only screen and (min-width: 1415px) {
+  .nav__menu {
+    padding: 2em 8em;
+  }
+  div.hero-container {
+    display: grid;
+    grid-template-columns: 2fr 1fr;
+    padding: 0 8em;
+  }
+  div.hero-container .title h1 {
+    padding-top: 2.4em;
+  }
+  div.first-container {
+    padding: 0 8em;
+  }
+  div.second-container {
+    padding: 0 8em;
+  }
+  div.third-container {
+    padding: 0 8em;
+  }
+  div.fourth-container {
+    padding: 4em 8em;
+  }
+  div.fifth-container {
+    padding: 0 8em;
+    padding-bottom: 12em;
+  }
+  div.footer-container {
+    padding: 0 8em;
   }
 }/*# sourceMappingURL=index.css.map */
